# doc_assistant

./: .gitignore  README.md  pyproject.toml
doc_assistant/: __init__.py  __main__.py  cli.py  models.py
doc_assistant/answerer/: __init__.py  core.py
doc_assistant/chunker/: __init__.py  core.py
doc_assistant/indexer/: __init__.py  core.py
doc_assistant/loader/: __init__.py  core.py
doc_assistant/retriever/: __init__.py  core.py
docs/: README.md  architecture.md  implementation-process.md  learnings.md  research-inspiration.md
docs/research/: README.md  attention-retriever.md  fact-checking-intra.md  rag-fusion.md
tests/: __init__.py  test_answerer.py  test_chunker.py  test_cli.py  test_indexer.py  test_integration.py  test_loader.py  test_models.py  test_retriever.py
tests/fixtures/: sample.md  sample.py
