[project]
name = "doc-assistant"
version = "0.1.0"
description = "RAG-powered CLI tool to query your documentation in natural language"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.1.0",
    "chromadb>=0.4.0",
    "anthropic>=0.40.0",
    "langchain-text-splitters>=0.3.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
doc-assistant = "doc_assistant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["doc_assistant"]

[tool.hatch.build.targets.sdist]
include = [
    "doc_assistant/",
    "docs/",
    "tests/",
    "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
